--- a/people.html
+++ b/people.html
@@ -327,12 +327,24 @@ Kwak was a professor and chair of the Department of Communication and
 Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
 </div>
-<div id="emma-bennett" class="section level2">
-<h2>Emma Bennett</h2>
-<p><img src="files/Emma.JPG" style="width:30%; border:5px solid"></p>
-<p>Emma Bennett is a 4th-year Communication and Psychology student at
-University at Buffalo. She is a communication teaching assistant and
-research lab participant.</p>
+<div id="afolabi-franca" class="section level2">
+<h2>Afolabi Franca</h2>
+</div>
+<div id="james-kwarteng" class="section level2">
+<h2>James Kwarteng</h2>
+</div>
+<div id="tahleen-lattimer" class="section level2">
+<h2>Tahleen Lattimer</h2>
+</div>
+<div id="yi-yin-leong" class="section level2">
+<h2>Yi Yin Leong</h2>
+<p><img src="files/Yin.jpg" style="width:30%; border:5px solid"></p>
+<p>Yi Yin Leong is currently a Presidential Ph.D. Fellow in the
+Department of Communication at the University at Buffalo. Her research
+focuses on health and risk communication, specifically among women and
+LGBTQ+ populations. She hopes to contribute and advance the current
+scholarship, and offer insights into the lives of marginalized and
+disadvantaged communities.</p>
 </div>
 <div id="sara-holland-levin" class="section level2">
 <h2>Sara Holland Levin</h2>
@@ -346,6 +358,21 @@ and is passionate about examining these research questions from a
 computational perspective. At the University of Connecticut, Sara
 specializes in teaching digital production coursework.</p>
 </div>
+<div id="lili-romann" class="section level2">
+<h2>Lili Romann</h2>
+<p><img src="files/LRR_Headshot.png" style="width:30%; border:5px solid"></p>
+<p>Lili R. Romann (M.A., University of Connecticut) is a doctoral
+student at the UConn. Her research lies at the nexus of interpersonal
+health and computer-mediated communication. She studies health
+information-seeking processes, especially related to mental health
+communication, processes of health inquiry, sensitive self-disclosure,
+and self-diagnosis on social media. She is additionally passionate about
+promoting the importance safe and effective social media experiences,
+specifically in fostering democratic collaborations between user and
+platform in our algorithm-driven online world. She has served as a
+graduate assistant for the Department of Communication; Women’s, Gender,
+&amp; Sexuality Studies Program; and the Department of Journalism.</p>
+</div>
 <div id="junwan-seo" class="section level2">
 <h2>Junwan Seo</h2>
 <p><img src="files/Jun_Profile.jpg" style="width:30%; border:5px solid"></p>
@@ -355,6 +382,19 @@ effects, narrative effects, and computational social science. He is
 especially interested in the effects of emotional experiences and
 different narrative components such as storyline, characters, and visual
 features.</p>
+</div>
+<div id="chaeyeon-celine-yim" class="section level2">
+<h2>Chaeyeon “Celine” Yim</h2>
+<p><img src="files/Chaeyeon%20(Celine)%20Yim.JPG" style="width:30%; border:5px solid"></p>
+<p>Celine Yim is a Ph.D. student in the Department of Communication at
+the University of Connecticut, where she studies health communication
+and emerging technologies. She is also a communication assistant for the
+Technical Assistance to Brownfields Program in New England. Her research
+interest lies in health issues of stigmatized diseases and vaccines and
+environmental health issues like PFAS and brownfields through
+experimental designs and computational methods. She also explores
+human-AI interaction in various domains, such as healthcare, business,
+and education.</p>
 </div>
 <div id="rui-wang" class="section level2">
 <h2>Rui Wang</h2>
@@ -369,19 +409,6 @@ reshapes public perception. She is also interested in the effect of
 social media discussion on public attitudes and attention on health and
 politics. She had three-year teaching experience in the School of
 Journalism and Communication at Anhui Normal University.</p>
-</div>
-<div id="dongdong-yang" class="section level2">
-<h2>Dongdong Yang</h2>
-<p><img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid"></p>
-<p>Dongdong Yang is an ABD in the Department of Communication at the
-University of Connecticut. She is interested in the use and effects of
-new communication technologies in a cross-cultural context.
-Specifically, her recent work investigates cross-cultural differences
-between Chinese and U.S. college students in social media picture
-editing, cute sticker use for impression management, and emoji use in
-online political discussion. She also examines how identity (e.g.,
-gender, fanship, etc.) influences perceptions and attitudes in sports
-communication.</p>
 <div id="alumni-network" class="section level3">
 <h3><strong>ALUMNI NETWORK:</strong></h3>
 </div>
@@ -390,19 +417,31 @@ communication.</p>
 <h2>Zhiying Yue</h2>
 <p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
 <p>Zhiying Yue (Ph.D., University at Buffalo) was a research assistant
-in the CEM lab. She researches social media use and its impact on
-psychological and physical well-being. She currently holds a post-doc
-position at the Harvard Medical School.</p>
+in the CEM lab. She currently is a Scientist at the Digital Wellness Lab
+at Boston Children’s Hospital and an Instructor in Pediatrics at Harvard
+Medical School. Her work focuses on adolescents’ interactive media use
+and well-being.</p>
 </div>
 <div id="xinxia-dong" class="section level2">
 <h2>Xinxia Dong</h2>
 <p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
-<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her
-Ph.D. in the Department of Communication at the University at Buffalo.
-Xinxia’s academic interests lie in risk communication and social media.
-Her current published work primarily examines the risk information
-seeking and processing (RISP) model. She is also passionate about
-exploring emerging media and learning various computational methods.</p>
+<p>Xinxia Dong (Ph.D., University at Buffalo) is currently a Lecturer in
+the School of Journalism and Communication at Shanghai University. Her
+research focuses on risk communication.</p>
+</div>
+<div id="emma-bennett" class="section level2">
+<h2>Emma Bennett</h2>
+<p><img src="files/Emma.JPG" style="width:30%; border:5px solid"></p>
+<p>Emma Bennett is an MA student in the Parsons School of Design.</p>
+</div>
+<div id="dongdong-yang" class="section level2">
+<h2>Dongdong Yang</h2>
+<p><img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid"></p>
+<p>Dongdong Yang (Ph.D., University of Connecticut) is assistant
+professor in the School of Communication and Media at Montclair State
+University.She is primarily interested in digital media adoption and
+effects in cross-cultural communication, feminist media studies, and
+online political discussion.</p>
 </div>
 
 
