--- a/publications.html
+++ b/publications.html
@@ -275,6 +275,20 @@ $(document).ready(function () {
 <!-- --- -->
 <div id="journal-publications" class="section level2">
 <h2>JOURNAL PUBLICATIONS</h2>
+<p>Zhang, Y., Suk, J., Yang, D., Yue, Z., Wang, R., Dong, X., An, Z.,
+&amp; Joseph, K. (2025) <a
+href="https://doi.org/10.51685/jqd.2025.007.">Center-Left and Right-Wing
+News, YouTube, and Twitter as Key Connectors in the Social Media System:
+A Cross-Media and Cross-Platform Analysis of Hyperlinks.</a> <em>Journal
+of Quantitative Description: Digital Media.</em> <a
+href="https://doi.org/10.51685/jqd.2025.007"
+class="uri">https://doi.org/10.51685/jqd.2025.007</a>.</p>
+<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H.(2024) <a
+href="https://journals.sagepub.com/doi/full/10.1177/20563051241277606">Empowered
+or Constrained in Platform Governance? An Analysis of Twitter Users’
+Responses to Elon Musk’s Takeover.</a> <em>Social Media + Society.</em>
+<a href="https://doi.org/0.1177/20563051241277606"
+class="uri">https://doi.org/0.1177/20563051241277606</a>.</p>
 <p>Zhang, Y., Chen, F., Suk, J., &amp; Yue, Z. (2023) <a
 href="https://www.tandfonline.com/doi/full/10.1080/19312458.2023.2278177">WordPPR:
 A Researcher-Driven Computational Keyword Selection Method for Text Data
@@ -299,16 +313,27 @@ class="uri">https://doi.org/10.1177/14614448221137324</a></p>
 </div>
 <div id="under-review" class="section level2">
 <h2>UNDER REVIEW</h2>
-<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H. (R&amp;R). Empowered
-or Constrained in Platform Governance? An Analysis of Twitter Users’
-Responses to Elon Musk’s Takeover.</p>
 <p>Levin, S.H., Wang, R., Seo, J, Leong, Y.Y., Bennett, M., Yang, D.,
-Yang, Z., Chen, M., Zhang, Y., &amp; Suk, J. (under review). From
-#StayWoke to “Culture Wars”: How Social Justice Discourse Is Separately
-and Synergistically Politicized onTwitter and YouTube.</p>
+Yang, Z., Chen, M., Zhang, Y., &amp; Suk, J. (R&amp;R). From #StayWoke
+to “Culture Wars”: How Social Justice Discourse Is Separately and
+Synergistically Politicized onTwitter and YouTube.</p>
+<p>Suk, J., Zhang, Y., Wang, R., Yang, D., Levin, S.H., Seo, J. &amp;
+Dong, X. (R&amp;R). Politicization as a Temporal Phenomenon:
+Longitudinal Evolution of Social Media Activism #MeToo in a Polarized
+Era.</p>
 </div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
+<p>Wang, R., Seo, J., Yim, C., Levin, S.H., Romann, L., Suk, J., &amp;
+Zhang, Y. (2025). [Work In Progress] A cycle of contention: the
+politicized turn of discourse of AI on social media after ChatGPT. Paper
+accepted for presentation at the International Communication Association
+(ICA) Conference 2025, Denver, CO.</p>
+<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H.(2024). Empowered or
+Constrained in Platform Governance? An Analysis of Twitter Users’
+Responses to Elon Musk’s Takeover. Paper presented at the Association
+for Education in Journalism and Mass Communication (AEJMC) Conference
+2024, Philadelphia, PA.</p>
 <p>Wang, R., Levin, S.H., Seo, J, Leong, Y.Y., Bennett, E., Yang, D.,
 Yang, Z., Chen, M., Zhang, Y., &amp; Suk, J. (2024). From #StayWoke to
 “Culture Wars”: How Social Justice Discourse Is Separately and
