--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@ faculty-student collaborative research.</p>
 <p>With emerging media intertwined with almost every aspect of social
 life, particularly our politics, we are interested in understanding how
 they shape people’s lived experiences. Particularly, we study how people
-use digital media to consume news and political information, learn about
-politics, discuss and share political content with others, and engage in
-political processes. Here, we see politics as relevant to almost all
-facets of our public and private lives, from voting and participation in
-social movements, to what we purchase and what lifestyle we adopt.</p>
+use digital media to consume news and political information, discuss and
+share political content with others, and engage in political processes.
+Here, we see politics as relevant to almost all facets of our public and
+private lives, from voting and participation in social movements, to
+what we purchase and what lifestyle we adopt.</p>
 <p>Our methodological approach combines computational methods like NLP
 and network analysis with conventional quantitative methodologies such
 as surveys and experiments. We believe that this mixed-method approach
