--- a/projects.html
+++ b/projects.html
@@ -277,12 +277,30 @@ $(document).ready(function () {
 <h2>Ongoing</h2>
 <div id="ai-and-politics" class="section level3">
 <h3>AI and politics</h3>
+<p>Communication transmitters have been targets for political scrutiny
+and manipulation throughout history. Critics of new technologies point
+to political biases in the digital age, where conservatives claim a
+liberal bias in news media, and liberals criticize social media for
+facilitating the spread of misinformation from the right. The
+proliferation of AI is no exception to this trend. Following the launch
+of ChatGPT, we suggest that accusations of political bias in AI will
+intensify, mirroring the historical trajectory of earlier communication
+technologies that attract criticism and politicization by strong
+partisans. If AI turns political, it could severely impact public trust
+and adoption of AI, and more worryingly, lead to the rise of “partisan
+AI”. Drawing from the literature of identity politics and political
+media attacks, we approach this issue by asking questions about the
+transition from technological to political AI, as well as platform and
+user differences in the politicization of AI. We anticipate that the
+politicized turn in public discourse surrounding AI will be particularly
+salient among active partisans. We will investigate this question from a
+multi-platform perspective by comparing both TikTok and YouTube data.
+Broadly, we anticipate an emerging trend of associating AI with
+political discourse.</p>
 </div>
-<div
-id="themes-and-politicization-surrounding-fentanyl-misuse-on-video-platforms"
+<div id="a-visual-analysis-of-woke-discourse-on-youtube"
 class="section level3">
-<h3>Themes and Politicization surrounding Fentanyl Misuse on Video
-Platforms</h3>
+<h3>A visual analysis of “Woke” discourse on YouTube</h3>
 </div>
 <div id="mapping-out-political-chatter-on-tiktok"
 class="section level3">
@@ -330,24 +348,24 @@ performance and drove news media amplification. These results highlight
 the implications of social media and news media for the normalization of
 peripheral actors and ideologies.</p>
 </div>
-<div id="mapping-the-social-media-ecosystem" class="section level3">
-<h3>Mapping the social media ecosystem</h3>
+<div id="mapping-the-social-media-system" class="section level3">
+<h3>Mapping the social media system</h3>
 <p>Extending research on the technological features and user practices
-of social media, this article theorizes social media as an ecosystem
+of social media, this article theorizes social media as a system
 consisting of simultaneously differentiated yet interconnected
-platforms. We argue that how platforms are interconnected in this
-ecosystem is shaped by social media users’ cross-platform and
-cross-media sharing practices, which result in the dissemination of
-information across the social media ecosystem via hyperlinks. Using two
-distinct large-scale datasets on prominent issues in the U.S. and a
-rigorous manual coding of link domains, we investigate the linking
-patterns of 187 platforms. Our results reveal the prominent role of
-cross-media sharing within the social media ecosystem, with center-left
-and right-wing news being shared most frequently. Also, YouTube and
-Twitter emerge as two leading platforms facilitating interconnections
-among others. Providing robust empirical evidence, this study advances
-our theoretical understanding of social media platforms as forming an
-ecosystem connected through users’ sharing practices.</p>
+platforms. We argue that how platforms are interconnected in this system
+is shaped by social media users’ cross-platform and cross-media sharing
+practices, which result in the dissemination of information across the
+social media ecosystem via hyperlinks. Using two distinct large-scale
+datasets on prominent issues in the U.S. and a rigorous manual coding of
+link domains, we investigate the linking patterns of 187 platforms. Our
+results reveal the prominent role of cross-media sharing within the
+social media ecosystem, with center-left and right-wing news being
+shared most frequently. Also, YouTube and Twitter emerge as two leading
+platforms facilitating interconnections among others. Providing robust
+empirical evidence, this study advances our theoretical understanding of
+social media platforms as forming an ecosystem connected through users’
+sharing practices.</p>
 </div>
 <div id="the-politicization-of-the-metoo-movement"
 class="section level3">
