--- a/people.html
+++ b/people.html
@@ -13,10 +13,10 @@
 
 <title>people.knit</title>
 
-<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -58,6 +58,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -270,13 +271,13 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<!-- --- -->
-<!-- title: "People" -->
-<!-- --- -->
 <div id="yini-zhang-co-director" class="section level2">
-<h2>Yini Zhang (co-director)</h2>
-<p><img src="files/headshot2024.jpg" style="width:30%; border:5px solid"></p>
+<h2>YINI ZHANG (CO-DIRECTOR)</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/headshot2024.jpg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant
 professor in the Department of Communication at the University at
 Buffalo. She applies computational methods to the study of social media
@@ -291,9 +292,15 @@ and received media coverage from major news outlets like the New York
 Times, BBC, and USA TODAY.</p>
 <p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
 </div>
+</div>
+</div>
 <div id="jiyoun-suk-co-director" class="section level2">
-<h2>Jiyoun Suk (co-director)</h2>
-<p><img src="files/Jiyoun.jpeg" style="width:30%; border:5px solid"></p>
+<h2>JIYOUN SUK (CO-DIRECTOR)</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Jiyoun.jpeg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Jiyoun Suk (Ph.D., University of Wisconsin-Madison) is an Assistant
 Professor in the Department of Communication at the University of
 Connecticut. In her research, she looks at how the communication
@@ -307,9 +314,15 @@ movement. She currently looks at how digital activism is contextualized
 across specific geographies and social media platforms.</p>
 <p>contact: <a href="jiyoun.suk@uconn.edu">jiyoun.suk@uconn.edu</a></p>
 </div>
+</div>
+</div>
 <div id="nojin-kwak-co-director" class="section level2">
-<h2>Nojin Kwak (co-director)</h2>
-<p><img src="files/Kwak.jpeg" style="width:30%; border:5px solid"></p>
+<h2>NOJIN KWAK (CO-DIRECTOR)</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Kwak.jpeg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in
 the Department of Communication at the University at Buffalo (UB), State
 University of New York. In addition, he currently serves as Vice Provost
@@ -327,18 +340,41 @@ Kwak was a professor and chair of the Department of Communication and
 Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
 </div>
+</div>
+</div>
 <div id="afolabi-franca" class="section level2">
-<h2>Afolabi Franca</h2>
+<h2>AFOLABI FRANCA</h2>
+</div>
+<div id="yijin-guo" class="section level2">
+<h2>YIJIN GUO</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Yijin's headshot.jpg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
+<p>Yijin Guo is a Ph.D. student in the Department of Communication at
+the University at Buffalo. His research interests mainly focus on media
+effects, misinformation, and digital risks. His current work
+investigates misinformation interventions across different channels
+through surveys and experiments, and uses computational methods to
+examine social media discussions related to digital risks such as online
+scams.</p>
+</div>
+</div>
 </div>
 <div id="james-kwarteng" class="section level2">
-<h2>James Kwarteng</h2>
+<h2>JAMES KWARTENG</h2>
 </div>
 <div id="tahleen-lattimer" class="section level2">
-<h2>Tahleen Lattimer</h2>
+<h2>TAHLEEN LATTIMER</h2>
 </div>
 <div id="yi-yin-leong" class="section level2">
-<h2>Yi Yin Leong</h2>
-<p><img src="files/Yin.jpg" style="width:30%; border:5px solid"></p>
+<h2>YI YIN LEONG</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Yin.jpg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Yi Yin Leong is currently a Presidential Ph.D. Fellow in the
 Department of Communication at the University at Buffalo. Her research
 focuses on health and risk communication, specifically among women and
@@ -346,21 +382,15 @@ LGBTQ+ populations. She hopes to contribute and advance the current
 scholarship, and offer insights into the lives of marginalized and
 disadvantaged communities.</p>
 </div>
-<div id="sara-holland-levin" class="section level2">
-<h2>Sara Holland Levin</h2>
-<p><img src="files/Sara-Holland.jpg" style="width:30%; border:5px solid"></p>
-<p>Sara Holland Levin is a PhD student in Communication at the
-University of Connecticut. Her research focuses on political
-communication on social media, with a particular focus on politicization
-and polarization of attitudes. Sara is especially interested in how
-people process misinformation on social media through a political lens,
-and is passionate about examining these research questions from a
-computational perspective. At the University of Connecticut, Sara
-specializes in teaching digital production coursework.</p>
+</div>
 </div>
 <div id="lili-romann" class="section level2">
-<h2>Lili Romann</h2>
-<p><img src="files/LRR_Headshot.png" style="width:30%; border:5px solid"></p>
+<h2>LILI ROMANN</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/LRR_Headshot.png" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Lili R. Romann (M.A., University of Connecticut) is a doctoral
 student at the UConn. Her research lies at the nexus of interpersonal
 health and computer-mediated communication. She studies health
@@ -373,9 +403,15 @@ platform in our algorithm-driven online world. She has served as a
 graduate assistant for the Department of Communication; Women’s, Gender,
 &amp; Sexuality Studies Program; and the Department of Journalism.</p>
 </div>
+</div>
+</div>
 <div id="junwan-seo" class="section level2">
-<h2>Junwan Seo</h2>
-<p><img src="files/Jun_Profile.jpg" style="width:30%; border:5px solid"></p>
+<h2>JUNWAN SEO</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Jun_Profile.jpg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Junwan Seo is a Ph.D. student in the Department of Communication at
 the University at Buffalo. His research focuses on media uses and
 effects, narrative effects, and computational social science. He is
@@ -383,9 +419,15 @@ especially interested in the effects of emotional experiences and
 different narrative components such as storyline, characters, and visual
 features.</p>
 </div>
+</div>
+</div>
 <div id="chaeyeon-celine-yim" class="section level2">
-<h2>Chaeyeon “Celine” Yim</h2>
-<p><img src="files/Chaeyeon%20(Celine)%20Yim.JPG" style="width:30%; border:5px solid"></p>
+<h2>CHAEYEON “CELINE” YIM</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Chaeyeon%20(Celine)%20Yim.JPG" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Celine Yim is a Ph.D. student in the Department of Communication at
 the University of Connecticut, where she studies health communication
 and emerging technologies. She is also a communication assistant for the
@@ -396,52 +438,111 @@ experimental designs and computational methods. She also explores
 human-AI interaction in various domains, such as healthcare, business,
 and education.</p>
 </div>
-<div id="rui-wang" class="section level2">
-<h2>Rui Wang</h2>
-<p><img src="files/Rui_Profile.JPG" style="width:30%; border:5px solid"></p>
-<p>Rui Wang is a current Ph.D. student in the Department of
-Communication at the University of Buffalo, earned her M.A. in
-Information and Communication Studies at Rutgers University. Her
-research focuses on media effects and persuasion, combining
-computational methods with experimental and survey designs. She is
-particularly interested in how new technology applied to journalism
-reshapes public perception. She is also interested in the effect of
-social media discussion on public attitudes and attention on health and
-politics. She had three-year teaching experience in the School of
-Journalism and Communication at Anhui Normal University.</p>
-<div id="alumni-network" class="section level3">
-<h3><strong>ALUMNI NETWORK:</strong></h3>
 </div>
+<div class="section-toggle">
+<div class="section-toggle-header" data-toggle="collapse"
+data-target="#alumni-section" aria-expanded="true">
+<h2 id="alumni-network">
+ALUMNI NETWORK
+</h2>
+<p><span class="toggle-icon" aria-hidden="true">▼</span></p>
 </div>
+<div id="alumni-section" class="section-toggle-body collapse in"
+markdown="1">
 <div id="zhiying-yue" class="section level2">
-<h2>Zhiying Yue</h2>
-<p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
+<h2>ZHIYING YUE</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Zhiying_Yue.jpg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Zhiying Yue (Ph.D., University at Buffalo) was a research assistant
 in the CEM lab. She currently is a Scientist at the Digital Wellness Lab
 at Boston Children’s Hospital and an Instructor in Pediatrics at Harvard
 Medical School. Her work focuses on adolescents’ interactive media use
 and well-being.</p>
 </div>
+</div>
+</div>
 <div id="xinxia-dong" class="section level2">
-<h2>Xinxia Dong</h2>
-<p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
+<h2>XINXIA DONG</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/IMG_6408.JPG" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Xinxia Dong (Ph.D., University at Buffalo) is currently a Lecturer in
 the School of Journalism and Communication at Shanghai University. Her
 research focuses on risk communication.</p>
 </div>
+</div>
+</div>
 <div id="emma-bennett" class="section level2">
-<h2>Emma Bennett</h2>
-<p><img src="files/Emma.JPG" style="width:30%; border:5px solid"></p>
+<h2>EMMA BENNETT</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Emma.JPG" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
 <p>Emma Bennett is an MA student in the Parsons School of Design.</p>
 </div>
+</div>
+</div>
 <div id="dongdong-yang" class="section level2">
-<h2>Dongdong Yang</h2>
-<p><img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid"></p>
-<p>Dongdong Yang (Ph.D., University of Connecticut) is assistant
+<h2>DONGDONG YANG</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Dongdong-Yang-2018.jpeg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
+<p>Dongdong Yang (Ph.D., University of Connecticut) is an assistant
 professor in the School of Communication and Media at Montclair State
-University.She is primarily interested in digital media adoption and
+University. She is primarily interested in digital media adoption and
 effects in cross-cultural communication, feminist media studies, and
 online political discussion.</p>
+</div>
+</div>
+</div>
+<div id="sara-holland-levin" class="section level2">
+<h2>SARA HOLLAND LEVIN</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Sara-Holland.jpg" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
+<p>Sara Holland Levin (Ph.D., University of Connecticut) is an assistant
+professor of Media and Culture in the Department of Communication and
+Media at West Chester University of Pennsylvania. Her research focuses
+on political communication on social media, with a particular focus on
+politicization and polarization of attitudes. Sara is especially
+interested in how people process misinformation on social media through
+a political lens, and is passionate about examining these research
+questions from a computational perspective. At the University of
+Connecticut, Sara specializes in teaching digital production
+coursework.</p>
+</div>
+</div>
+</div>
+<div id="rui-wang" class="section level2">
+<h2>RUI WANG</h2>
+<div class="person-row">
+<div class="person-photo">
+<p><img src="files/Rui_Profile.JPG" class="profile-photo"></p>
+</div>
+<div class="person-text" markdown="1">
+<p>Rui Wang (Ph.D., University at Buffalo) is an assistant professor in
+the Department of Communication and Media at Loyola University Maryland.
+Her research focuses on media effects and persuasion, combining
+computational methods with experimental and survey designs. She is
+particularly interested in how new technology applied to journalism
+reshapes public perception. She is also interested in the effect of
+social media discussion on public attitudes and attention on health and
+politics.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 
 
