--- a/projects.html
+++ b/projects.html
@@ -13,10 +13,10 @@
 
 <title>projects.knit</title>
 
-<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -58,6 +58,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -270,13 +271,11 @@ $(document).ready(function () {
 </div>
 
 
-<!-- --- -->
-<!-- title: "Projects" -->
-<!-- --- -->
-<div id="ongoing" class="section level2">
-<h2>Ongoing</h2>
+<div id="ongoing-projects" class="section level2">
+<h2>ONGOING PROJECTS</h2>
 <div id="ai-and-politics" class="section level3">
-<h3>AI and politics</h3>
+<h3>AI AND POLITICS</h3>
+<p><img src="files/project-ai-politics.png" class="project-img" /></p>
 <p>Communication transmitters have been targets for political scrutiny
 and manipulation throughout history. Critics of new technologies point
 to political biases in the digital age, where conservatives claim a
@@ -300,17 +299,53 @@ political discourse.</p>
 </div>
 <div id="a-visual-analysis-of-woke-discourse-on-youtube"
 class="section level3">
-<h3>A visual analysis of “Woke” discourse on YouTube</h3>
+<h3>A VISUAL ANALYSIS OF “WOKE” DISCOURSE ON YOUTUBE</h3>
+<p><img src="files/project-woke-youtube.png" class="project-img" /></p>
+<p>Scholars have extensively examined the politicization of social
+issues and movements, conceptualizing politicization as comprising actor
+participation and discursive conflict dimensions. Despite the central
+role of social media platforms, particularly YouTube, in shaping
+politicized discourse, limited attention has been paid to the visual
+mechanisms through which politicization is performed and intensified.
+This study addresses that gap by analyzing YouTube thumbnails of
+“woke”-related videos published between 2012 and 2022. We examine how
+political actors and conflicts are visually portrayed and whether the
+visual politicization of “woke” is more pronounced among conservative
+and anti-woke channels than among liberal and #StayWoke channels.
+Additionally, we investigate how stylistic features that likely amplify
+politicization – visual arousal and visual loudness – ideological
+groups. Together, these analyses advance understanding of how the
+politicization of “woke” discourse is both represented and intensified
+through visual communication on social media</p>
 </div>
-<div id="mapping-out-political-chatter-on-tiktok"
+<div id="evolution-of-dei-discourse-across-social-and-news-media"
 class="section level3">
-<h3>Mapping out political chatter on TikTok</h3>
+<h3>EVOLUTION OF DEI DISCOURSE ACROSS SOCIAL AND NEWS MEDIA</h3>
+<p><img src="files/project-dei-discourse.png" class="project-img" /></p>
+<p>Over the past few years, public discourse around diversity, equity,
+and inclusion has shifted from broadly supportive to increasingly
+polarized and contested. This project asks what has driven that change
+and how social media platforms have shaped and amplified it.</p>
 </div>
+<div id="trust-in-gai-across-the-digital-media-ecosystem"
+class="section level3">
+<h3>TRUST IN GAI ACROSS THE DIGITAL MEDIA ECOSYSTEM</h3>
+<p><img src="files/project-trust-gai.png" class="project-img" /></p>
+<p>How do people express trust and distrust in generative AI across
+social media platforms? What do these expressions reveal about how GAI
+is positioned within the broader digital media ecosystem?</p>
+<div class="section-toggle">
+<div class="section-toggle-header" data-toggle="collapse"
+data-target="#completed-section" aria-expanded="true">
+<h2 id="completed-projects">
+COMPLETED PROJECTS
+</h2>
+<p><span class="toggle-icon" aria-hidden="true">▼</span></p>
 </div>
-<div id="completed" class="section level2">
-<h2>Completed:</h2>
+<div id="completed-section" class="section-toggle-body collapse in"
+markdown="1">
 <div id="metoo-cross-platform-discourses" class="section level3">
-<h3>#MeToo cross-platform discourses</h3>
+<h3>#METOO CROSS-PLATFORM DISCOURSES</h3>
 <p>This project situates our analysis in discourses on sexual violence
 and gender justice activism on Twitter, Facebook, Instagram, and Reddit.
 We propose a three-pronged framework to understand discourses
@@ -332,7 +367,7 @@ similarities and differences.</p>
 </div>
 <div id="accumulation-of-influence-on-social-media"
 class="section level3">
-<h3>Accumulation of influence on social media</h3>
+<h3>ACCUMULATION OF INFLUENCE ON SOCIAL MEDIA</h3>
 <p>Though the use of social media by peripheral groups in society has
 received rising scholarly attention, it remains unclear how social media
 might contribute to their increased influence and how their social media
@@ -349,7 +384,7 @@ the implications of social media and news media for the normalization of
 peripheral actors and ideologies.</p>
 </div>
 <div id="mapping-the-social-media-system" class="section level3">
-<h3>Mapping the social media system</h3>
+<h3>MAPPING THE SOCIAL MEDIA SYSTEM</h3>
 <p>Extending research on the technological features and user practices
 of social media, this article theorizes social media as a system
 consisting of simultaneously differentiated yet interconnected
@@ -369,7 +404,7 @@ sharing practices.</p>
 </div>
 <div id="the-politicization-of-the-metoo-movement"
 class="section level3">
-<h3>The politicization of the #MeToo movement</h3>
+<h3>THE POLITICIZATION OF THE #METOO MOVEMENT</h3>
 <p>With existing research showing the fragilities of social media
 activism and the stubbornness of partisan beliefs and attitudes, we
 examine whether partisans politicize social media activism.
@@ -386,7 +421,7 @@ use time series modeling to examine the relationship between features of
 accusations and types of expressions.</p>
 </div>
 <div id="from-staywoke-to-wokemindvirus" class="section level3">
-<h3>From #StayWoke to #WokeMindVirus</h3>
+<h3>FROM #STAYWOKE TO #WOKEMINDVIRUS</h3>
 <p>This project explores how the discourse surrounding a racially
 marginalized community becomes politicized via culture wars narratives
 across platforms. Drawing from the thesis of identity politics and
@@ -409,7 +444,7 @@ cross-platform coordination in helping them amplify culture war issues.
 Both theoretical and political implications are discussed.</p>
 </div>
 <div id="elon-musk-and-twitter" class="section level3">
-<h3>Elon Musk and Twitter</h3>
+<h3>ELON MUSK AND TWITTER</h3>
 <p>Centering on social media’s public- and profit-oriented nature, this
 project theorizes how social media users are empowered and constrained
 when participating in platform governance. The empirical analysis
@@ -426,6 +461,9 @@ business. Potential bots also increased in volume and amplified
 political topics. Our findings shed light on the challenges of
 user-driven platform governance, underscoring the complex interplay
 between platform users, economy, and governance.</p>
+</div>
+</div>
+</div>
 </div>
 </div>
 
