--- a/publications.html
+++ b/publications.html
@@ -13,10 +13,10 @@
 
 <title>publications.knit</title>
 
-<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -58,6 +58,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -270,33 +271,45 @@ $(document).ready(function () {
 </div>
 
 
-<!-- --- -->
-<!-- title: "Publications" -->
-<!-- --- -->
-<div id="journal-publications" class="section level2">
-<h2>JOURNAL PUBLICATIONS</h2>
-<p>Zhang, Y., Suk, J., Yang, D., Yue, Z., Wang, R., Dong, X., An, Z.,
-&amp; Joseph, K. (2025) <a
+<div class="publications-page">
+<div class="section-toggle">
+<div class="section-toggle-header" data-toggle="collapse"
+data-target="#journal-pubs" aria-expanded="true">
+<h2>
+JOURNAL PUBLICATIONS
+</h2>
+<p><span class="toggle-icon" aria-hidden="true">▼</span></p>
+</div>
+<div id="journal-pubs" class="section-toggle-body collapse in"
+markdown="1">
+<p>Suk, J.*, Zhang, Y.*, Wang, R., Yang, D., Levin, S.H., Seo, J. &amp;
+Dong, X. (2025). <a
+href="https://www.tandfonline.com/doi/full/10.1080/1369118X.2025.2581014">From
+activism to polarization: temporal dynamics of #MeToo politicization on
+Twitter/X.</a> <em>Information, Communication &amp; Society.</em>
+[*co-first authors] doi: 10.1080/1369118X.2025.2581014.</p>
+<p>Zhang, Y.*, Suk, J.*, Yang, D., Yue, Z., Wang, R., Dong, X., An, Z.,
+&amp; Joseph, K. (2025). <a
 href="https://doi.org/10.51685/jqd.2025.007.">Center-Left and Right-Wing
 News, YouTube, and Twitter as Key Connectors in the Social Media System:
 A Cross-Media and Cross-Platform Analysis of Hyperlinks.</a> <em>Journal
-of Quantitative Description: Digital Media.</em> <a
+of Quantitative Description: Digital Media.</em> [*co-first authors] <a
 href="https://doi.org/10.51685/jqd.2025.007"
 class="uri">https://doi.org/10.51685/jqd.2025.007</a>.</p>
-<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H.(2024) <a
+<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H. (2024). <a
 href="https://journals.sagepub.com/doi/full/10.1177/20563051241277606">Empowered
 or Constrained in Platform Governance? An Analysis of Twitter Users’
 Responses to Elon Musk’s Takeover.</a> <em>Social Media + Society.</em>
 <a href="https://doi.org/0.1177/20563051241277606"
 class="uri">https://doi.org/0.1177/20563051241277606</a>.</p>
-<p>Zhang, Y., Chen, F., Suk, J., &amp; Yue, Z. (2023) <a
+<p>Zhang, Y., Chen, F., Suk, J., &amp; Yue, Z. (2023). <a
 href="https://www.tandfonline.com/doi/full/10.1080/19312458.2023.2278177">WordPPR:
 A Researcher-Driven Computational Keyword Selection Method for Text Data
 Retrieval from Digital Media.</a> <em>Communication Methods and
 Measures.</em> <a href="https://doi.org/10.1080/19312458.2023.2278177"
 class="uri">https://doi.org/10.1080/19312458.2023.2278177</a></p>
 <p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., &amp;
-Lian, R. (2023) <a
+Lian, R. (2023). <a
 href="https://journals.sagepub.com/doi/abs/10.1177/00936502231154146">When
 the Personal Becomes Political: Unpacking the Dynamics of Sexual
 Violence and Gender Justice Discourses across Four Social Media
@@ -311,25 +324,39 @@ Twitter accounts.</a> <em>New Media &amp; Society</em>,
 14614448221137324. <a href="https://doi.org/10.1177/14614448221137324"
 class="uri">https://doi.org/10.1177/14614448221137324</a></p>
 </div>
-<div id="under-review" class="section level2">
-<h2>UNDER REVIEW</h2>
+</div>
+<div class="section-toggle under-review-block">
+<div class="section-toggle-header" data-toggle="collapse"
+data-target="#under-review" aria-expanded="true">
+<h2>
+MANUSCRIPTS UNDER REVIEW
+</h2>
+<p><span class="toggle-icon" aria-hidden="true">▼</span></p>
+</div>
+<div id="under-review" class="section-toggle-body collapse in"
+markdown="1">
 <p>Levin, S.H., Wang, R., Seo, J, Leong, Y.Y., Bennett, M., Yang, D.,
 Yang, Z., Chen, M., Zhang, Y., &amp; Suk, J. (R&amp;R). From #StayWoke
 to “Culture Wars”: How Social Justice Discourse Is Separately and
 Synergistically Politicized onTwitter and YouTube.</p>
-<p>Suk, J., Zhang, Y., Wang, R., Yang, D., Levin, S.H., Seo, J. &amp;
-Dong, X. (R&amp;R). Politicization as a Temporal Phenomenon:
-Longitudinal Evolution of Social Media Activism #MeToo in a Polarized
-Era.</p>
 </div>
-<div id="conference-papers" class="section level2">
-<h2>CONFERENCE PAPERS</h2>
+</div>
+<div class="section-toggle">
+<div class="section-toggle-header" data-toggle="collapse"
+data-target="#conference-papers" aria-expanded="true">
+<h2>
+CONFERENCE PAPERS
+</h2>
+<p><span class="toggle-icon" aria-hidden="true">▼</span></p>
+</div>
+<div id="conference-papers" class="section-toggle-body collapse in"
+markdown="1">
 <p>Wang, R., Seo, J., Yim, C., Levin, S.H., Romann, L., Suk, J., &amp;
 Zhang, Y. (2025). [Work In Progress] A cycle of contention: the
 politicized turn of discourse of AI on social media after ChatGPT. Paper
 accepted for presentation at the International Communication Association
 (ICA) Conference 2025, Denver, CO.</p>
-<p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H.(2024). Empowered or
+<p>Wang, R, Zhang, Y., Suk, J., &amp; Levin, S.H.(2024). Empowered or
 Constrained in Platform Governance? An Analysis of Twitter Users’
 Responses to Elon Musk’s Takeover. Paper presented at the Association
 for Education in Journalism and Mass Communication (AEJMC) Conference
@@ -365,6 +392,8 @@ Conference of ICA.</p>
 Strategic Performance, Audience Feedback, and Media Amplification: An
 Analysis of the Behaviors and Influence of QAnon Twitter Accounts. Paper
 presented at the 2022 Annual Conference of ICA.</p>
+</div>
+</div>
 </div>
 
 
