--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <title>index.knit</title>
 
-<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -58,6 +58,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -270,6 +271,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><img src="files/lab_intro.png" class="hero-img" /></p>
 <p><strong>The Communication and Emerging Media (CEM[kem]) Lab</strong>
 is a collaborative research group that investigates the role of emerging
 media in the political communication landscape of the 21st century.
@@ -282,17 +284,19 @@ faculty-student collaborative research.</p>
 <p>With emerging media intertwined with almost every aspect of social
 life, particularly our politics, we are interested in understanding how
 they shape people’s lived experiences. Particularly, we study how people
-use digital media to consume news and political information, discuss and
-share political content with others, and engage in political processes.
-Here, we see politics as relevant to almost all facets of our public and
-private lives, from voting and participation in social movements, to
-what we purchase and what lifestyle we adopt.</p>
-<p>Our methodological approach combines computational methods like NLP
-and network analysis with conventional quantitative methodologies such
-as surveys and experiments. We believe that this mixed-method approach
-can help us better understand the psychological mechanisms and
-behavioral patterns of people’s experiences with emerging media as well
-as the social and political implications of emerging media.</p>
+use digital media, including AI and social media platforms, to consume
+news and political information, discuss and share political content with
+others, and engage in political processes. Here, we see politics as
+relevant to almost all facets of our public and private lives, from
+voting and participation in social movements, to what we purchase and
+what lifestyle we adopt.</p>
+<p>Our methodological approach combines computational methods like, LLM
+prompting, machine learning, and network analysis with conventional
+quantitative methodologies such as surveys and experiments. We believe
+that this mixed-method approach can help us better understand the
+psychological mechanisms and behavioral patterns of people’s experiences
+with emerging media as well as the social and political implications of
+emerging media.</p>
 <p>The CEM Lab is dedicated to providing an open, diverse, inclusive,
 and collaborative space for students interested in political
 communication to develop their research skills. Through close faculty
@@ -301,7 +305,10 @@ the research process including idea generation, research design, data
 collection and analysis, and writing. We hope such hands-on research
 experience will prepare graduate students to later conduct independent
 research.</p>
-<p><img src="files/social_media.jpg" /></p>
+<p class="about-logo-row">
+<img src="files/ub.png" alt="University at Buffalo logo" class="about-logo-img">
+<img src="files/uconn.png" alt="University of Connecticut logo" class="about-logo-img">
+</p>
 
 
 
