--- a/publications.html
+++ b/publications.html
@@ -290,10 +290,11 @@ Twitter/X.</a> <em>Information, Communication &amp; Society.</em>
 [*co-first authors] doi: 10.1080/1369118X.2025.2581014.</p>
 <p>Zhang, Y.*, Suk, J.*, Yang, D., Yue, Z., Wang, R., Dong, X., An, Z.,
 &amp; Joseph, K. (2025). <a
-href="https://doi.org/10.51685/jqd.2025.007.">Center-Left and Right-Wing
-News, YouTube, and Twitter as Key Connectors in the Social Media System:
-A Cross-Media and Cross-Platform Analysis of Hyperlinks.</a> <em>Journal
-of Quantitative Description: Digital Media.</em> [*co-first authors] <a
+href="https://journalqd.org/article/view/5984">Center-Left and
+Right-Wing News, YouTube, and Twitter as Key Connectors in the Social
+Media System: A Cross-Media and Cross-Platform Analysis of
+Hyperlinks.</a> <em>Journal of Quantitative Description: Digital
+Media.</em> [*co-first authors] <a
 href="https://doi.org/10.51685/jqd.2025.007"
 class="uri">https://doi.org/10.51685/jqd.2025.007</a>.</p>
 <p>Wang, R., Zhang, Y., Suk, J., &amp; Levin, S.H. (2024). <a
